[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/ldfcomicsans-font/Ldfcomicsanslight-6dZo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://2ds sfx gfx/sfx/cs2d open.wav" type="AudioStream" id=2]
[ext_resource path="res://2ds sfx gfx/sfx/cs2d close.wav" type="AudioStream" id=3]
[ext_resource path="res://2ds sfx gfx/gfx/dialog.png" type="Texture" id=4]
[ext_resource path="res://BGcolor/white.jpg" type="Texture" id=5]
[ext_resource path="res://2ds sfx gfx/gfx/wallpaper.jpg" type="Texture" id=6]
[ext_resource path="res://2ds sfx gfx/gfx/tombol.png" type="Texture" id=7]
[ext_resource path="res://main/Pfriends.gd" type="Script" id=8]
[ext_resource path="res://main/main.tres" type="DynamicFont" id=9]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 81, 70, 241, 6 )

[sub_resource type="DynamicFont" id=7]
size = 46
outline_size = 3
outline_color = Color( 0.54902, 0.54902, 0.54902, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( -0.153473, 240.859, 159.221, 45.1126 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( -2, 187, 163, 49 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 190.334, 158, 44.5835 )

[node name="Pfriendsreq" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 11.0
margin_top = -230.0
margin_right = -10.0
margin_bottom = -224.0
texture = SubResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="obrol" type="TextureRect" parent="TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -455.5
margin_top = 144.0
margin_right = -105.5
margin_bottom = 766.0
rect_scale = Vector2( 2.60997, 0.489099 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="TextureRect2/obrol"]
position = Vector2( 174.575, 308.979 )
scale = Vector2( 1.81874, 5.55018 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="TextureRect2/obrol"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.2785
margin_top = -75.846
margin_right = 319.721
margin_bottom = -146.846
rect_scale = Vector2( 0.423598, 1.38573 )
custom_colors/font_color = Color( 0.486275, 0.486275, 0.486275, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "No friend requests..."
align = 1
valign = 1

[node name="Label2" type="Label" parent="TextureRect2/obrol"]
margin_left = 16.8584
margin_top = -100.184
margin_right = 123.858
margin_bottom = -69.1842
rect_scale = Vector2( 0.56016, 2.31887 )
custom_fonts/font = ExtResource( 9 )
text = "Nickname"

[node name="Label3" type="Label" parent="TextureRect2/obrol"]
margin_left = 135.634
margin_top = -100.184
margin_right = 242.634
margin_bottom = -69.1842
rect_scale = Vector2( 0.56016, 2.31887 )
custom_fonts/font = ExtResource( 9 )
text = "ID"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="profile" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 11, 9 )
scale = Vector2( 1.04444, 1.04444 )
normal = SubResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/profile"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Profile"
align = 1
valign = 1

[node name="friends" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 223, 8 )
normal = SubResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/friends"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Friends"
align = 1
valign = 1

[node name="groups" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 432, 9 )
scale = Vector2( 1.04444, 1.04444 )
normal = SubResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/groups"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Groups"
align = 1
valign = 1

[node name="leaders" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 643, 9 )
scale = Vector2( 1.04444, 1.04444 )
normal = SubResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/leaders"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Leaders"
align = 1
valign = 1

[node name="news" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 847, 9 )
scale = Vector2( 1.04444, 1.04444 )
normal = SubResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/news"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "News"
align = 1
valign = 1

[node name="back" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2( 432, 536 )
scale = Vector2( 1.04444, 1.04444 )
normal = SubResource( 4 )
pressed = SubResource( 6 )

[node name="Label" type="Label" parent="HBoxContainer/back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
valign = 1

[node name="friendds" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -165, -27 )

[node name="myfriend" type="TouchScreenButton" parent="friendds"]
position = Vector2( 71, 89 )
scale = Vector2( 1.47528, 1.26637 )
normal = SubResource( 4 )

[node name="Label" type="Label" parent="friendds/myfriend"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 35.0
margin_bottom = 10.0
rect_scale = Vector2( 0.819768, 0.819768 )
custom_fonts/font = ExtResource( 9 )
text = "My friends"
align = 1
valign = 1

[node name="friendreq" type="TouchScreenButton" parent="friendds"]
position = Vector2( 398, 88 )
scale = Vector2( 1.39735, 1.19536 )
normal = SubResource( 3 )

[node name="Label" type="Label" parent="friendds/friendreq"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.72513
margin_right = 19.7251
rect_scale = Vector2( 0.875926, 0.969184 )
custom_fonts/font = ExtResource( 9 )
text = "Friends request"
align = 1
valign = 1

[node name="findfrend" type="TouchScreenButton" parent="friendds"]
position = Vector2( 726, 89 )
scale = Vector2( 1.47528, 1.26637 )
normal = SubResource( 4 )

[node name="Label" type="Label" parent="friendds/findfrend"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 35.0
margin_bottom = 10.0
rect_scale = Vector2( 0.819768, 0.819768 )
custom_fonts/font = ExtResource( 9 )
text = "Find friends"
align = 1
valign = 1

[node name="open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/profile" to="." method="_on_profile_pressed"]
[connection signal="pressed" from="HBoxContainer/groups" to="." method="_on_groups_pressed"]
[connection signal="pressed" from="HBoxContainer/leaders" to="." method="_on_leaders_pressed"]
[connection signal="pressed" from="HBoxContainer/news" to="." method="_on_news_pressed"]
[connection signal="released" from="HBoxContainer/back" to="." method="_on_back_released"]
[connection signal="pressed" from="friendds/myfriend" to="." method="_on_myfriend_pressed"]
[connection signal="pressed" from="friendds/findfrend" to="." method="_on_findfrend_pressed"]
